[package]
name = "project2-async-chat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true

[dev-dependencies]
tokio-test = "0.4"

