[package]
name = "project3-file-pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true

[dev-dependencies]
tempfile = "3.8"

